# RoboCup-Home-Carry-My-Luggage

./: LICENSE  README.md  ReadMe.md
carry_my_luggage/carry_moveit/: CMakeLists.txt  package.xml
carry_my_luggage/carry_moveit/launch/: arm_prepare.launch  drop.launch  grasp.launch  grasp_vertical.launch
carry_my_luggage/carry_moveit/launch/config/: arm_prepare_config.yaml  arm_velocity_config.yaml  drop_config.yaml  grasp_config.yaml  grasp_vertical_config.yaml
carry_my_luggage/carry_moveit/scripts/: tuck_arm.py
carry_my_luggage/carry_moveit/src/: arm.cpp  arm_torso.cpp  drop.cpp  grasp.cpp
carry_my_luggage/carry_navi/: CMakeLists.txt  package.xml
carry_my_luggage/carry_navi/launch/: grasp_drop_simulation.launch  localization.launch  simulation.launch
carry_my_luggage/carry_navi/launch/config/: localization_config.yaml
carry_my_luggage/carry_navi/maps/ics_lab_map/: map.pgm  map.yaml
carry_my_luggage/carry_navi/src/: carry_localization_node.cpp
carry_my_luggage/carry_navi/worlds/: ics_simulation.world  wrs2020_cola.world
carry_my_luggage/carry_perception/: CMakeLists.txt  package.xml  readme.md
carry_my_luggage/carry_perception/launch/: object_detection.launch  object_labeling.launch  plane_segmentation.launch
carry_my_luggage/carry_perception/launch/config/: plane_segmentation_config.yaml
carry_my_luggage/carry_perception/scripts/: bgr2rgb_node.py
carry_my_luggage/carry_perception/src/: object_labeling.cpp  plane_segmentation.cpp
carry_my_luggage/carry_perception/src/applications/: object_labeling_node.cpp  plane_segmentation_node.cpp
carry_my_luggage/carry_task_manager/: CMakeLists.txt  package.xml  setup.py
carry_my_luggage/carry_task_manager/scripts/: task_manager.py
carry_my_luggage/yolov8_pose_gazebo/: CMakeLists.txt  README.md  package.xml  readme.md
carry_my_luggage/yolov8_pose_gazebo/scripts/: yolov8_pose_gazebo.py
carry_my_luggage/yolov8_pose_gazebo/src/: yolov8_pose_gazebo.py
